--- a/requirements.txt
+++ b/requirements.txt
@@ -2,18 +2,23 @@ apm==0.0.1
 appdirs==1.4.4
 asgiref==3.3.1
 beautifulsoup4==4.9.3
+brew==0.1.3
 certifi==2020.12.5
 chardet==4.0.0
 conda==4.3.16
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.7
+django-heroku==0.3.1
 filelock==3.0.12
+gunicorn==20.1.0
 idna==2.10
 numpy==1.20.1
 pandas==1.2.3
 pi==0.1.2
+psycopg2==2.8.6
 pycosat==0.6.3
-python-dateutil==2.8.1
+python-dateutil==1.5
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.25.1
@@ -24,3 +29,4 @@ soupsieve==2.2.1
 sqlparse==0.4.1
 urllib3==1.26.4
 virtualenv==20.4.3
+whitenoise==5.2.0
